html markup and style.scss (customized)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,290 @@
-.container { width:100px; height:100px; background: rgba(255, 255, 255, 1);}
+* {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji';
+  box-sizing: content-box;
+}
+
+body {
+  background-color: #f6f6f7;
+  color: #202223;
+}
+
+.container-wrap {
+  padding: 0 24px;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 64px auto;
+  font-size: 24px;
+  color: #202223;
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 200px;
+
+  .input-area {
+    display: flex;
+    width: 100%;
+
+    .todo-input {
+      padding: 14px 16px;
+      font-size: 18px;
+      border: 1px solid #babfc3;
+      border-radius: 5px;
+      background: #fff;
+      width: 100%;
+      margin-right: 5px;
+    }
+
+    .todo-btn {
+      padding: 14px 18px;
+      font-size: 18px;
+      line-height: 18px;
+      border-radius: 5px;
+      background: #fff;
+      color: #fff;
+      background: #007f60;
+      border: 1px solid #007f60;
+      cursor: pointer;
+    }
+    .todo-btn:hover,
+    .todo-btn:focus {
+      background: #006e52;
+      border-color: #006e52;
+    }
+  }
+}
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .todo-list {
+    width: 100%;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: inset 0px -1px 0px #e1e3e5;
+
+    .todo {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 14px 16px;
+      font-size: 16px;
+      color: #202223;
+
+      // !
+      // transition: 1s ease;
+
+      .todo-item {
+        // !
+        flex-grow: 1;
+        border: none;
+        font-size: 16px;
+        line-height: 22px;
+        outline: none;
+        padding: 0 8px;
+
+        // !
+        overflow-x: scroll;
+        white-space: nowrap;
+      }
+
+      &.delete {
+        // !
+        transform: translateX(10rem);
+        opacity: 0;
+      }
+
+      &.done {
+        // !
+        text-decoration: line-through;
+        opacity: 0.5;
+      }
+
+      .todo-item::-webkit-scrollbar {
+        display: none;
+      }
+
+      .complete-btn {
+        margin: 0 4px 0 0;
+        background: #fff;
+        color: #202223;
+        border: 1px solid #8c9196;
+        border-radius: 4px;
+        padding: 14px 16px;
+        cursor: pointer;
+        font-size: 14px;
+        line-height: 18px;
+      }
+
+      .edit-btn {
+        margin: 0 4px;
+        background: #007f60;
+        color: #fff;
+        border: 1px solid #007f60;
+        border-radius: 4px;
+        padding: 14px 16px;
+        cursor: pointer;
+        font-size: 14px;
+        line-height: 18px;
+      }
+
+      .save-btn {
+        margin: 0 4px;
+        background: #007f60;
+        color: #fff;
+        border: 1px solid #007f60;
+        border-radius: 4px;
+        padding: 14px 16px;
+        cursor: pointer;
+        font-size: 16px;
+        line-height: 18px;
+        display: none;
+      }
+
+      .delete-btn {
+        margin: 0 0 0 4px;
+        background: #fff;
+        color: #d82c0d;
+        border: 1px solid #d82c0d;
+        border-radius: 4px;
+        padding: 14px 16px;
+        cursor: pointer;
+        font-size: 16px;
+        line-height: 18px;
+      }
+
+      &.edit {
+        .complete-btn,
+        .edit-btn,
+        .delete-btn {
+          display: none;
+        }
+
+        .save-btn {
+          display: block;
+        }
+      }
+    }
+  }
+}
+
+.input-container .radio-area {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+
+  input[type='radio'] {
+    width: 0;
+    height: 0;
+    position: absolute;
+    left: -9999px;
+
+    + label {
+      padding: 10px 16px;
+      background-color: #fff;
+      box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.05),
+        0px 0px 1px rgba(0, 0, 0, 0.25);
+      cursor: pointer;
+      color: #202223;
+      font-size: 14px;
+      line-height: 22px;
+      border-radius: 8px;
+      // transition: 0.2s;
+    }
+
+    &:checked + label {
+      border: 2px solid #202223;
+      font-weight: 700;
+    }
+  }
+}
+
+// !
+@media (min-width: 1024px) {
+  header {
+    max-width: 768px;
+  }
+  .input-container {
+    max-width: 768px;
+    margin: 0 auto;
+  }
+  .input-area {
+    max-width: 768px;
+    .todo-input {
+      max-width: 768px;
+    }
+  }
+  .todo-container {
+    .todo-list {
+      max-width: 768px;
+    }
+  }
+  .input-container .radio-area {
+    max-width: 768px;
+  }
+}
+
+// !
+@media (max-width: 420px) {
+  header {
+    margin: 72px auto 24px;
+    font-size: 18px;
+  }
+
+  .todo-container {
+    .todo-list {
+      .todo {
+        .complete-btn,
+        .edit-btn,
+        .delete-btn,
+        .save-btn {
+          padding: 12px 14px;
+          font-size: 12px;
+          line-height: 16px;
+        }
+      }
+    }
+  }
+}
+
+// !
+@media (max-width: 360px) {
+  .input-container .radio-area {
+    input[type='radio'] {
+      + label {
+        padding: 8px 14px;
+        font-size: 12px;
+        line-height: 20px;
+      }
+    }
+  }
+
+  .todo-container {
+    .todo-list {
+      .todo {
+        .complete-btn,
+        .edit-btn,
+        .delete-btn,
+        .save-btn {
+          padding: 10px 12px;
+          font-size: 12px;
+          line-height: 14px;
+        }
+      }
+    }
+  }
+}
